# transparent-image-trimmer

./: .gitignore  README.md  pyproject.toml  trim.py
