[tool.poetry]
name = "transparent-image-trimmer"
version = "0.1.0"
description = ""
authors = ["zizo <zizo.toiawase@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
opencv-python = "^4.11.0.86"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
